[!!!][FEATURE] Introduce new category type handlinging
The old TYPO3 Enumaration based category handling system is now
replaced with a new category handling type providing the ability
to define extension based category types using a yaml-file based
approach.

`Configuration/CategoryTypes.yaml` files from all TYPO3 extensions
are automatically parsed and registered, needing to provide types
under the `types` key word using following syntax:

```yaml
types:
  - identifier: <unique_identifier>
    title: '<type-translation-lable-using-full-LLL-syntax'
    group: <group-identifier>
    icon: '<icon-file-using-EXT-syntax-needs-to-be-an-as-svg>'
```

The `group-identifier` is important in the way that this is
used to group category types for a specific extension, and
academic extensions supporting (requiring) the category-type
handling based on `EXT:category_types` uses a selected group
identifier. Currently extension group identifiers are:

- `EXT:academic_partners`: partners
- `EXT:academic_programs`: programs
- `EXT:academic_projects`: projects

Aforementioned extensions also provides default category types
for the mentioned group, which can be extended in projects by
providing `Configuration/CategoryTypes.yaml` file(s) within a
sitepackage extension or multiple local path extensions.

Extensions are allowed to register additional category-types
for aforementioned groups by simply using the identifier for
the `group` key.

The new category-type handling API is considered experimental
for now and may still change in early 2.x.x versions, until a
stable implementation regarding signature has been etablished.

In general projects may implement own category-type handling
based on `EXT:category_types`, but needs to adopt implementation
by looking up the aforementioned extensions. A comprehensive
documentation for developers will be added in a later point.

The same counts for upgrade strategy from old 1.x.x enumaration
based category-type handling to the new 2.x.x implement

--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -2,6 +2,7 @@
 <xliff version="1.0">
 	<file
 		source-language="en"
+		target-language="de"
 		datatype="plaintext"
 		original="messages"
 		date="2023-03-20T13:05:33Z"
@@ -10,12 +11,15 @@
 		<body>
 			<trans-unit id="sys_category.type">
 				<source>Type</source>
+				<target>Typ</target>
 			</trans-unit>
 			<trans-unit id="sys_category.type.default">
 				<source>Default</source>
+				<target>Standard</target>
 			</trans-unit>
 			<trans-unit id="sys_category.not_set">
 				<source>Not set</source>
+				<target>Nicht gesetzt</target>
 			</trans-unit>
 		</body>
 	</file>
